...
    Scaffold(
        modifier = Modifier.fillMaxSize(),
        topBar = {
            CenterAlignedTopAppBar(
                title = {
                    Text(
                        text = "Home"
                    )
                },
                navigationIcon = {
                    IconButton(onClick = { onSettings() }) {
                        Icon(Icons.Default.Settings, contentDescription = "settings")
                    }
...
                onClick = { onNewHabit() },
                containerColor = MaterialTheme.colorScheme.primary,
                shape = CircleShape
            ) {
                Icon(
                    imageVector = Icons.Default.Add,
                    contentDescription = "Add a new habit",
                    tint = MaterialTheme.colorScheme.tertiary
                )
            }
        }
    ) { padding ->
        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.TIRAMISU) {
...
